--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <div id="app">
-      <div class="chat_container"></div>
+      <div id="chat_container"></div>
+
+      <form>
+        <textarea name="prompt" rows="1" cols="1" placeholder="Ask codex..."></textarea>
+        <button type="submit"><img src="assets/send.svg" alt="send" />
+      </form>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
