--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
       <div id="chat_container"></div>
 
       <form>
-        <textarea name="prompt" rows="5" cols="1" placeholder="Спросить chatGPT..."></textarea>
+        <textarea name="prompt" rows="5" cols="1" placeholder="Спросить ChatGPT..."></textarea>
         <button type="submit"><img src="assets/send.svg" alt="send" />
       </form>
     </div>
